# ru-gui

./: Makefile.am  configure.ac
data/: Makefile.am  black.mvi  keymap.xml  menu.xml  rcpositions.xml  setup.xml  skin.xml  skin_box.xml  skin_default.xml  skin_subtitles.xml  startwizard.xml
data/fonts/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/SystemPlugins/: Makefile.am
main/: bsod.cpp
tools/: enigma2.sh.in
